[gd_scene load_steps=5 format=3 uid="uid://bctwxau8k5flx"]

[ext_resource type="Script" uid="uid://cyok3fr1usild" path="res://scenes/heal_player_button/heal_player_button.gd" id="1_ektpl"]
[ext_resource type="Texture2D" uid="uid://crgtnk1y6w7w3" path="res://sprites/basic_button_text.png" id="2_vvevb"]

[sub_resource type="LabelSettings" id="LabelSettings_vvevb"]
font_color = Color(0.0545674, 0.713976, 0.0454693, 1)

[sub_resource type="LabelSettings" id="LabelSettings_38t5j"]
font_size = 10

[node name="HealPlayerButton" type="Control"]
custom_minimum_size = Vector2(48, 48)
layout_mode = 3
anchors_preset = 0
offset_right = 48.0
offset_bottom = 48.0
script = ExtResource("1_ektpl")

[node name="Button" type="Button" parent="."]
layout_mode = 0
offset_right = 8.0
offset_bottom = 8.0
icon = ExtResource("2_vvevb")

[node name="HealLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 6.0
offset_top = 12.0
offset_right = 46.0
offset_bottom = 35.0
text = "Heal"
label_settings = SubResource("LabelSettings_vvevb")

[node name="MouseTooltipLabel" type="Label" parent="."]
visible = false
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0
text = "Heal costs 5 gold"
label_settings = SubResource("LabelSettings_38t5j")

[connection signal="mouse_entered" from="Button" to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="Button" to="." method="_on_mouse_exited"]
[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
